--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Typescript: Hello World</title>
 </head>
 <body>
-    <script src="src/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
